applet: no need to quote address argument

for bluetooth-sendto

https://bugzilla.gnome.org/show_bug.cgi?id=653479